[project]
name = "vibetest"
version = "0.1.0"
description = "Browser-agent QA swarm with MCP interface for testing AI-generated websites"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]==1.13.1",
  "browser-use==0.6.1",
  "playwright==1.54.0",
  "langchain_google_genai==2.1.9",
  "langchain_core==0.3.74",
  "pydantic==2.11.7",
  "screeninfo==0.8.1",
]

[tool.setuptools.packages.find]
include = ["vibetest*"]

[project.scripts]
vibetest-mcp = "vibetest.mcp_server:run"